# Sage

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  backtest_2024_q4.py  backtest_2024_q4_realistic.py  chat_session.md  conversation-2026-02-11.md  download_baostock.py  download_baostock_recent.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt  run_backtest_best_model.py  run_backtest_with_checkpoint.py  test_macro_prediction.py  test_nbs_monthly.py  test_simple_model.py  test_trained_model.py
.githooks/: post-checkout  post-merge  pre-commit
config/: README.md  base.yaml  daily_tminus1.yaml  download_plans.yaml  download_plans_20260219.yaml  download_plans_20260220.yaml  joinquant.example.json  nbs_product_gb_keywords.yaml  nbs_product_sw_mapping.yaml  policy_industry_alias.yaml  policy_industry_keywords.yaml  policy_keywords.yaml  policy_sources.yaml  sw_nbs_mapping.yaml  sw_nbs_mapping_l2.yaml  tushare_tasks.yaml
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: 2.0 Sage股票智能交易平台TODO_LIST.md  2.1 Sage股票智能交易平台总架构设计文档.md  2.10 Sage股票智能交易平台需求文档.md  2.11 Sage股票智能交易平台宏观模型模块设计文档.md  2.12 Sage股票智能交易平台主线与行业轮动模块设计文档.md  2.13 Sage股票智能交易平台选股排序模型模块设计文档.md  2.14 Sage股票智能交易平台买卖点过滤模块设计文档.md  2.15 Sage股票智能交易平台组合构建与风控模块设计文档.md  2.16 Sage股票智能交易平台回测引擎模块设计文档.md  2.16 Sage趋势驱动波段交易系统设计文档.md  2.17 Sage股票智能交易平台数据治理与数据源适配模块设计文档.md  2.18 Sage股票智能交易平台特征与标签模块设计文档.md  2.19 Sage股票智能交易平台监控与报告模块设计文档.md  2.2 Sage股票智能交易平台趋势状态模块设计文档.md  2.20 Sage股票智能交易平台异步任务模块设计文档.md  2.21 Sage股票智能交易平台特征字典与计算规则.md  2.22 Sage股票智能交易平台接口与调用流程设计文档.md  (+36 more)
(+471 files in other folders)
